# ai_sys

./: .mypy.ini  .pre-commit-config.yaml  .ruff.toml  Makefile  main.py  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: health.py
app/models/: __init__.py  base.py  health.py
app/models/schemas/: ai.py  rag.py  user.py
app/repositories/: health_repo.py
app/services/: health_service.py
tests/: test_app.py  test_health.py  test_models.py
